# chart-pattern-alert

./: .env.example  .gitignore  README.md  TASK.md  docker-compose.yml
.github/workflows/: deploy.yml
api/: Dockerfile  README.md  pyproject.toml  requirements.txt
api/app/: __init__.py  config.py  main.py  models.py
api/app/routes/: health.py  ohlcv.py
api/app/services/: cache.py  data_source.py
api/tests/: conftest.py  test_cache.py  test_data_source.py  test_health.py  test_ohlcv.py
docs/: README.md  architecture.md
docs/api/: cors.md  data-source.md
docs/api/endpoints/: health.md  ohlcv.md
docs/frontend/screens/: main.md  (+1 more)
docs/infra/: deploy-github-pages.md  docker-compose.md  reverse-proxy-assumption.md  upstream-proxy-contract.md
docs/patterns/: ascending-flag.md  ascending-triangle.md  common.md  descending-flag.md  descending-triangle.md  double-bottom.md  double-top.md  head-and-shoulders.md  inverse-head-and-shoulders.md  resistance-support-flip-down.md  resistance-support-flip-up.md
web/: .env.example  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/public/: sw.js
web/src/: app.ts  main.ts  styles.css
web/tests/: ascendingFlag.spec.ts  ascendingTriangle.spec.ts  config.spec.ts  descendingFlag.spec.ts  descendingTriangle.spec.ts  doubleBottom.spec.ts  doubleTop.spec.ts  flipDown.spec.ts  flipUp.spec.ts  headAndShoulders.spec.ts  higherTimeframe.spec.ts  inverseHeadAndShoulders.spec.ts  notifier.spec.ts  patternTracker.spec.ts  pivots.spec.ts  scoring.spec.ts  storage.spec.ts  volume.spec.ts
(+35 files in other folders)
